# book-lending-system

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260316_0001_create_initial_schema.py  20260316_0002_add_active_loan_unique_index.py  20260317_0003_add_unique_constraint_for_books.py
app/: dependencies.py  main.py
app/api/routers/: books.py  loans.py  users.py
app/api/schemas/: book.py  user.py
app/core/: config.py  database.py
app/db/models/: __init__.py  book.py  book_copy.py  loan.py
app/models/db/: __init__.py  book.py  user.py
app/models/schemas/: loan.py
app/repositories/: book_repository.py  loan_repository.py  user_repository.py
app/services/: book_service.py  loan_service.py  user_service.py
docker/: Dockerfile
tests/: conftest.py  test_api.py
